<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.sakaiproject.purepoms</groupId>
        <artifactId>sakai-standard-tool</artifactId>
        <version>2.7.0-build05-SNAPSHOT</version>
    </parent>

    <name>Sakai Job Scheduler Project (base pom)</name>
    <groupId>org.sakaiproject.scheduler</groupId>
    <artifactId>scheduler</artifactId>
    <version>2.8-SNAPSHOT</version>
    <packaging>pom</packaging>

    <properties>
        <sakai.jsf.version>2.7.0-M1</sakai.jsf.version>
        <url.localsite>scp://source.sakaiproject.org/var/www/html/release/scheduler/${project.version}</url.localsite>
    </properties>

    <modules>
        <module>scheduler-api</module>
        <module>scheduler-assembly</module>
        <module>scheduler-component</module>
        <module>scheduler-component-shared</module>
        <module>scheduler-tool</module>
    </modules>

    <pluginRepositories>
        <pluginRepository>
            <id>maven2-central-repo</id>
            <name>Maven2 Central Repo</name>
            <url>http://repo1.maven.org/maven2/</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </pluginRepository>
        <pluginRepository>
            <id>Sakai Plugin Repo</id>
            <url>http://source.sakaiproject.org/maven2</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>

    <repositories>
        <repository>
            <id>sakai-maven2</id>
            <name>Sakai Maven Repository</name>
            <layout>default</layout>
            <url>http://source.sakaiproject.org/maven2</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>sakai-maven2-snapshots</id>
            <name>Sakai Maven Repo Snapshots</name>
            <layout>default</layout>
            <url>http://source.sakaiproject.org/maven2-snapshots</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>default</id>
            <name>Maven Repository Switchboard</name>
            <layout>default</layout>
            <url>http://repo1.maven.org/maven2</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>

    <scm>
        <connection>scm:svn:https://source.sakaiproject.org/svn/jobscheduler/trunk</connection>
        <developerConnection>scm:svn:https://source.sakaiproject.org/svn/jobscheduler/trunk</developerConnection>
        <url>https://source.sakaiproject.org/svn/jobscheduler/trunk</url>
    </scm>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>scheduler-api</artifactId>
                <version>${project.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>scheduler-component-shared</artifactId>
                <version>${project.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.sakaiproject.jsf</groupId>
                <artifactId>jsf-tool</artifactId>
                <version>${sakai.jsf.version}</version>
            </dependency>
            <dependency>
                <groupId>org.sakaiproject.jsf</groupId>
                <artifactId>jsf-app</artifactId>
                <version>${sakai.jsf.version}</version>
            </dependency>
            <dependency>
                <groupId>org.sakaiproject.jsf</groupId>
                <artifactId>jsf-widgets-sun-depend</artifactId>
                <version>${sakai.jsf.version}</version>
                <type>pom</type>
            </dependency>
            <!-- scheduler-assembly deploys quartz to shared. -->
            <dependency>
                <groupId>quartz</groupId>
                <artifactId>quartz</artifactId>
                <version>1.6.5</version>
                <scope>provided</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <reportSets>
                    <reportSet>
                        <id>aggregate</id>
                        <configuration>
                            <aggregate>true</aggregate>
                            <source>1.5</source>
                            <encoding>UTF-8</encoding>
                            <links>
                                <link>http://java.sun.com/j2se/1.5.0/docs/api</link>
                                <link>http://java.sun.com/products/servlet/2.3/javadoc/</link>
                            </links>
                            <breakiterator>true</breakiterator>
                            <verbose>false</verbose>
                            <maxmemory>512m</maxmemory>
                            <additionalJOption>
                                -J-Xms168m -J-Xmx512m -J-XX:PermSize=128m -J-XX:NewSize=64m
                            </additionalJOption>
                        </configuration>
                        <reports>
                            <report>aggregate</report>
                        </reports>
                    </reportSet>
                </reportSets>
            </plugin>
        </plugins>
    </reporting>
</project>